# StoryForge

./: .codex-fix-phase9b-complete.patch  .codex-fix-phase9b-full.local.patch  .dev_plan.md  .dockerignore  .env.example  .env.production.example  .gitignore  .pre-commit-config.yaml  .prettierignore  AGENTS.md  AI_ITERATION_GUIDE.md  CLAUDE.md  CONTEXT.md  MODULE_ISOLATION_SCORECARD.md  PROJECT_SUMMARY.md  README.md  REFACTOR_PLAN.md  TODO.md  current-phase.md  docker-compose.prod.yml  docker-compose.yml  eslint.config.mjs  package.json  pnpm-lock.yaml
apps/api/: .dockerignore  Dockerfile  alembic.ini  pyproject.toml  run_real_smoke.py  run_windows.py
apps/api/.codex/: context-summary-重构计划.md  operations-log.md  verification-report.md
apps/api/alembic/: env.py  script.py.mako
apps/api/alembic/versions/: 20260514_phase2_创建_phase_2_领域模型.py  20260520_0001_add_pgvector_retrieval_index.py  20260527_0001_add_book_blueprints.py  20260527_0002_add_memory_source_chapter.py  20260527_0003_add_character_bible.py  20260528_0001_backfill_current_orm_schema.py  20260529_0001_configurable_pgvector_dims.py  20260602_0001_add_assistant_sessions.py  20260602_0002_add_timeline_events.py  20260602_0003_add_character_bible_version_sync.py  20260604_0001_merge_phase2_and_current_heads.py  20260608_0001_add_memory_atom_embeddings.py  20260609_0001_add_continuity_edges.py  20260609_0002_add_assistant_tool_calls.py  20260610_0001_add_model_run_observability.py  20260623_0001_add_agent_runs.py  20260630_0001_add_story_state.py  20260702_0001_add_assistant_session_project_path.py  71dfabf6badf_创建_phase_1_领域模型.py  (+4 more)
apps/api/app/: __init__.py  author_chat.py  main.py  models.py
apps/api/docker/: entrypoint.sh  migrate.py
apps/api/scripts/: __init__.py  measure_ide_sse_latency.py
apps/api/tests/: agent_canon_test_fixtures.py  agent_canon_test_support.py  agent_loop_runtime_test_fixtures.py  agent_loop_runtime_test_support.py  agent_run_test_support.py  agent_transport.py  book_generation_test_support.py  conftest.py  test_agent_adapters.py  test_agent_canon.py  test_agent_canon_context.py  test_agent_canon_delta.py  test_agent_canon_hooks.py  test_agent_collapse_scan.py  test_agent_consistency_scan.py  test_agent_deep_consistency.py  test_agent_entity_budget_scan.py  test_agent_fs_tools.py  test_agent_llm_context.py  test_agent_loop_runtime.py  test_agent_loop_runtime_lifecycle.py  test_agent_loop_runtime_tools.py  test_agent_observatory.py  test_agent_promise_scan.py  test_agent_prose_scan.py  test_agent_run_resume.py  test_agent_run_roles.py  test_agent_run_save_points.py  test_agent_run_transport.py  test_agent_runs.py  test_agent_transport.py  test_alembic_heads.py  test_alembic_schema_current_orm.py  test_api_middleware.py  test_api_surface.py  test_approval_writeback.py  test_artifact_s3_export.py  test_artifacts.py  test_assets_api.py  test_assistant_provider_health.py  (+133 more)
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/workflow/: .dockerignore  Dockerfile  pyproject.toml
apps/workflow/.codex/: context-summary-provider-adapter.md  operations-log.md  verification-report.md
apps/workflow/docker/: entrypoint.sh
apps/workflow/langchain_core/: __init__.py  runnables.py
apps/workflow/langgraph/: __init__.py  graph.py  types.py
apps/workflow/storyforge_workflow/: __init__.py  graph.py  longform.py  persistence.py  provider_client.py  state.py  storyforge_api_client.py
apps/workflow/tests/: conftest.py  test_arc_consistency_barrier.py  test_book_context_cache.py  test_book_loop_resume.py  test_book_loop_three_chapters.py  test_book_run_adapter.py  test_book_run_dispatch_payload.py  test_chapter_planner.py  test_chapter_scheduler.py  test_continuity_extractor_llm.py  test_continuity_extractor_parse.py  test_continuity_submitter_factory.py  test_creative_tool_registry.py  test_generation_graph.py  test_generation_state_references.py  test_genre_skill_registry.py  test_llm_provider.py  test_longform_generation.py  test_model_run_token_tracking.py  test_narrative_collapse_and_beat_sheet.py  test_narrative_entity_budget.py  test_narrative_extract.py  test_narrative_forbidden_terms.py  test_narrative_plan.py  test_narrative_registries.py  test_novel_loop_single_chapter.py  test_novel_loop_skill_runner_integration.py  test_novel_loop_submit_continuity.py  test_novel_skill_diagnostics.py  test_novel_skill_registry.py  test_novel_skill_runner.py  test_phase3_arc_consistency.py  test_prompt_builder.py  test_prose_static_check.py  test_provider_adapter.py  test_provider_degradation_pause.py  test_provider_fallback.py  test_provider_parity_harness.py  test_runtime_runner.py  test_skill_audit_summary.py  (+4 more)
(+1822 files in other folders)
