[project]
name = "storyforge-api"
version = "0.1.0"
description = "StoryForge 应用 API 服务"
requires-python = ">=3.11"
dependencies = [
  "fastapi[standard]>=0.115.0",
  "pydantic>=2.10.0",
  "sqlalchemy>=2.0.0",
  "alembic>=1.13.0",
  "psycopg[binary]>=3.2.0",
  "redis>=5.2.0",
  "pytest>=8.3.0",
  "httpx>=0.28.0",
  "slowapi>=0.1.9",
  "structlog>=24.1.0",
  "sentry-sdk[fastapi]>=2.0.0",
  "ruff>=0.11.0",
  "prometheus-fastapi-instrumentator>=7.1.0",
  "pyjwt>=2.9.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]
ignore = ["E501"]
